Done some more stuff regarding updating existing issues in the list when action happens. Started implementing template layout for notifications. After that is done it is time to start wrapping things up by making sure all notifications and updates works. Then make the application production ready on the real server.

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -136,7 +136,7 @@ main div.issues .issuesHeader {
 
 main div.issue {
     box-sizing: border-box;
-	width: 100%;
+	width: calc(100% - 20px);
 	padding: 0;
 	background-color: #fff;
 	margin: 10px;
@@ -154,6 +154,14 @@ main div.issue .header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+main div.issue .header.update {
+    background: #ff00aa;
+}
+
+main div.issue .header .news {
+    font-size: 0.8rem;
 }
 
 main div.issue .header a {
@@ -243,6 +251,32 @@ main div.notifications .notificationsHeader {
     margin: 10px;
     color: #6932d0;
     font-size: 1.0rem;
+    font-weight: 800;
+}
+
+main div.notification {
+    box-sizing: border-box;
+	width: calc(100% 20px);
+	padding: 0;
+	background-color: #fff;
+	margin: 10px;
+}
+
+main div.notification .header {
+    box-sizing: border-box;
+    width: 100%;
+    height: 40px;
+    padding: 10px;
+    background: #6932d0;
+    color: #ffffff;
+    font-size: 1.2rem;
+    font-weight: 400;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+main div.notification .header .action {
     font-weight: 800;
 }
 
